CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(vmIter)

ADD_COMPILE_OPTIONS(-g)
ADD_COMPILE_OPTIONS(-O0)
ADD_COMPILE_OPTIONS(-Wall)
ADD_COMPILE_OPTIONS(-std=c11)

FIND_LIBRARY(DL dl REQUIRED)

ADD_SUBDIRECTORY(src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)

ADD_EXECUTABLE(MAIN main.c)
TARGET_LINK_LIBRARIES(MAIN SRC_LIB ${DL})

INSTALL(TARGETS MAIN DESTINATION bin)
